syntax = "proto3";
package douyin.favorite;
option go_package = "douyin/favorite";

import "feed.proto";

message FavoriteRequest {
  uint32 actor_id = 1; // 用户id
  uint32 video_id = 2; // 视频id
  uint32 action_type = 3; // 1-点赞，2-取消点赞
}

message FavoriteResponse {
  uint32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
}

message FavoriteListRequest {
  uint32 user_id = 1; // 用户id
}

message FavoriteListResponse {
  uint32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
  repeated feed.Video video_list = 3; // 用户点赞视频列表
}

message IsFavoriteRequest {
  uint32 user_id = 1; // 用户id
  uint32 video_id = 2; // 视频id
}

message IsFavoriteResponse {
  bool result = 1; // 结果
}

service FavoriteService {
  rpc FavoriteAction (FavoriteRequest) returns (FavoriteResponse){
  }
  rpc FavoriteList (FavoriteListRequest) returns (FavoriteListResponse) {
  }
  rpc IsFavorite (IsFavoriteRequest) returns (IsFavoriteResponse) {
  }
}
