syntax = "proto3";

package douyin.feed;
option go_package = "douyin/feed";

import "user.proto";

message Video {
  int64 id = 1;
  user.User author = 2;
  string play_url = 3;
  string cover_url = 4;
  int64 favorite_count = 5;
  int64 comment_count = 6;
  bool is_favorite = 7;
  string title = 8;
}

message ListFeedRequest {
  optional string latest_time = 1;
  optional string token = 2;
}

message ListFeedResponse {
  int32 status_code = 1;
  optional string status_msg = 2;
  optional int64 next_time = 3;
  repeated Video videos = 4;
}

service FeedService {
  rpc ListVideos(ListFeedRequest) returns (ListFeedResponse);
}
